--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ title: Alice's Blog # the main title
 tagline: My Blog # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A home page for Chew Jin Hao< Alice, a Singaporean Student in River Valley High School.
+  A home page for Chew Jin Hao, Alice, a Singaporean Student in River Valley High School.
   Cybersecurity, webdev and linguistic enthusiast. 
-  
+
 
 # Fill in the protocol & hostname for your site.
 url: "https://ctjh.github.io"
